# rest_client_server_website

./: README.md  docker-compose.yml
client/: Dockerfile  package.json
client/src/: index.js
client/src/pages/: Page.js
server/: Cargo.toml  Dockerfile
server/src/: main.rs  tests.rs
