[package]
name = "rest_server"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Scholz <github@christopher-scholz.com>"]
description = "REST API Server of the static personal website for Christopher Scholz, which is build with Rocket."
repository = "https://github.com/christopherscholz/rust_clienter_server_website/server"
license = "MIT"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "uuid"]

[dependencies.uuid]
version = "1.2.1"
features = ["v4", "serde"]